[package]
name = "bevy_ecs_tilemap_autotile_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Note I added the above optimizations and dynamic linking feature for Bevy following the Bevy setup: https://bevyengine.org/learn/book/getting-started/setup/

[dependencies]
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap", branch = "update-helpers" }
bevy-inspector-egui = "0.13.0"
bitflags = "1.3.2"

# Guide https://bevy-cheatbook.github.io/setup/bevy-config.html
[dependencies.bevy]
version = "0.8.*"

